@@ -9,3 +9,5 @@ Thanks to:
     Jiri Hlinka whoes add a czech translation
     Klaos Lacerda and Bruno Gonçalves whoes add a brazilian portuguese 
 translation
+    Zhengpeng Hou whoes update the traditional chinese translation
+
