@@ -46,3 +46,5 @@
 	- add czech translation
 	- fix bug with multiple running from different users
 	- add brazilian portuguese translation
+	- update the traditional chinese translation
+
